FIX: Scrollbar white background

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* Fügen Sie einen sanften Übergang für Farb- und Hintergrundänderungen zwischen den Themes hinzu */
